課題完成時点修正

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
               HTML&CSS/JavaScript/Photoshop/Ruby/Ruby on<br>
               Rails<br>
           </div>
+        </section>  
     </main>
 
     <footer>
